5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1758_2390.log
== TEST (2019-05-28 22:15:58) 
-- CODE:
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
print(pm-fm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    pm=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:16:22) 
-- CODE:
from numpy import*

pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
print(pm-fm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:17:18) 
-- CODE:
from numpy import*

pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
print(max(rm))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:18:07) 
-- CODE:
from numpy import*

pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
print(rm,max(rm))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:26:31) 
-- CODE:
from numpy import*
i=0
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
while i!=size(pm):
	if rm[i]==max(rm):
		print(i)
	i=i+1
	
print(rm,max(rm))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:27:26) 
-- CODE:
from numpy import*
i=0
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
while i!=size(pm):
	print(i)
	if rm[i]==max(rm):
		print(i)
	i=i+1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:28:21) 
-- CODE:
from numpy import*
i=0
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
while i!=size(pm):
	print(rm)
	print(i,rm[i])
	if rm[i]==max(rm):
		print(i)
	i=i+1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:28:56) 
-- CODE:
from numpy import*
i=0
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
print(rm)
while i!=size(pm):

	print(i,rm[i])
	if rm[i]==max(rm):
		print(i)
	i=i+1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:32:08) 
-- CODE:
from numpy import*
i=0
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
while i!=size(pm):
	if rm[i]==max(rm):
		print(i+1)
	i=i+1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:32:33) 
-- CODE:
from numpy import*
i=0
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
while i!=size(pm):
	if rm[i]==max(rm):
		print(i+1)
	i=i+1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:32:47) 
-- CODE:
from numpy import*
i=0
pm=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
while i!=size(pm):
	if rm[i]==max(rm):
		print(i+1)
	i=i+1


-- EXECUTION TIME:
0.467915
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
